[workspace]
members = [
  "abc201",
  "abc202",
  "abc336",
  "abc337",
  "abc338",
  "abc339",
  "abc340",
  "abc341",
  "abc342",
  "abc343",
  "abc344",
  "abc345",
  "abc346",
  "abc347",
  "abc348",
  "abc349",
  "abc350",
  "abc351",
  "abc352",
  "abc353",
  "abc354",
  "abc356",
]
resolver = "2"

[profile.release]
lto = true
panic = 'abort'
